--- a/src/x-saw-fa-icon-demo/css/styles.scss
+++ b/src/x-saw-fa-icon-demo/css/styles.scss
@@ -1,7 +1,7 @@
 @import '@servicenow/sass-kit/host';
 @import '../../shared/css/vars';
 
-.pipeline-manager-container {
+.fa-icon-demo-container {
     user-select: none;
     color: #717171;
     margin: 0 10px;
@@ -10,7 +10,7 @@
 
     &.fixed-layout {
         position: absolute;
-        top: 48px;
+        top: 0;
         left: 0;
         right: 0;
         bottom: 0;
@@ -24,12 +24,78 @@
             display: flex;
             flex-flow: column nowrap;
 
-            & > .pipeline-tables {
-                width: 100%;
-                height: 100%;
+            & > .inner-header {
+                flex: 0 0 auto;
+            }
+
+            & > .inner-body {
+                flex: 1 1 auto;
+                overflow: auto;
+                padding: 20px;
                 display: flex;
-                flex-flow: row nowrap;
-                position: relative;
+                flex-flow: column nowrap;
+                align-items: center;
+
+                & > .body-icons {
+                    margin: -15px -7px;
+                    display: flex;
+                    flex-flow: row wrap;
+                    max-width: 1200px;
+
+                    & > .icon-container {
+                        margin: 15px 7px;
+                        width: calc((100% / 9) - 14px);
+                        border: 1px solid #e5e5e5;
+                        background: white;
+                        border-radius: 4px;
+                        box-shadow: $base-shadow;
+                        display: flex;
+                        flex-flow: column nowrap;
+                        overflow: hidden;
+
+                        &:hover {
+                            & > .icon-body {
+                                background: $swLightBlue;
+                                color: white;
+                            }
+
+                            & > .icon-footer {
+                                color: #495057;
+                            }
+                        }
+
+                        & > .icon-body {
+                            display: flex;
+                            flex-flow: column nowrap;
+                            align-items: center;
+                            justify-content: center;
+                            color: #495057;
+                            flex: 0 0 auto;
+                            height: 80px;
+                            transition: background 0.15s ease-in-out, color 0.15s ease-in-out;
+                        }
+
+                        & > .icon-footer {
+                            flex: 0 0 auto;
+                            text-align: center;
+                            border-top: 1px solid #e5e5e5;
+                            display: flex;
+                            flex-flow: row nowrap;
+                            align-items: center;
+                            justify-content: center;
+                            padding: 5px;
+                            height: 40px;
+                            color: #adb5bd;
+                            transition: color 0.15s ease-in-out;
+
+                            & > span {
+                                line-height: 12px;
+                                font-size: 11px;
+                                user-select: all;
+                            }
+                        }
+                    }
+                }
             }
         }
     }
