- Fixed the change styling on :host selector

--- a/src/x-saw-fa-icon-demo/components/fa-icon/styles.scss
+++ b/src/x-saw-fa-icon-demo/components/fa-icon/styles.scss
@@ -1,6 +1,6 @@
 @import '@servicenow/sass-kit/host';
 
-:host(x-saw-fa-icon) {
+:host {
 	display: inline-flex;
 	font-size: $now-global-font-size--md;
 	color: inherit;
